--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: start worker
-on: push
-#on:
-#  schedule:
-#    - cron:  '5 14 * * *'   
+#on: push
+on:
+  schedule:
+    - cron:  '0 0 1 * *'   
 jobs:
   build:
     runs-on: ubuntu-latest
