--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: start worker
 #on: push
 on:
   schedule:
-    - cron:  '0 0 1 * *'   
+    - cron:  '0 11 * * 0'   
 jobs:
   build:
     runs-on: ubuntu-latest
