--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -14,7 +14,7 @@ jobs:
       run: |
           sudo apt-get update
           sudo apt-get install -y git python3 sudo python3-pip
-          sudo pip3 install PyGithub          
+          sudo pip3 install requests          
     - name: runs
       env:
         COMMIT_MSG: |
