--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -1,8 +1,8 @@
 name: start worker
-#on: push
-on:
-  schedule:
-    - cron:  '5 22 * * *'   
+on: push
+#on:
+#  schedule:
+#    - cron:  '5 22 * * *'   
 jobs:
   build:
     runs-on: ubuntu-latest
