--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -1,5 +1,8 @@
 name: start worker
-#on: push
+#on: 
+#  push:
+#    branches:
+#      - main
 on:
   schedule:
     - cron:  '5 22 * * *'   
@@ -9,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
       with:
-        ref: ${{ github.head_ref }}
+        ref: main
     - name: install depends
       run: |
           sudo apt-get update
