--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
 name: start worker
-on: 
-  push:
-    branches:
-      - main
-#on:
-#  schedule:
-#    - cron:  '0 11 * * 0'   
+#on: 
+#  push:
+#    branches:
+#      - main
+on:
+  schedule:
+    - cron:  '0 11 * * 0'   
 jobs:
   build:
     runs-on: ubuntu-latest
